W3M3: add Train-test Errors Gap, and fix small images

--- a/content/custom.scss
+++ b/content/custom.scss
@@ -4,3 +4,7 @@
     text-align: right;
     direction: rtl;
 }
+
+.center {
+    text-align: center;
+}
